--- a/css/components/toast.css
+++ b/css/components/toast.css
@@ -1,7 +1,7 @@
 .toast {
   padding: 0.5rem 1rem;
-  background-color: hsla(var(--accent), 0.2);
-  color: hsl(var(--accent-darker));
+  background-color: hsla(var(--accent), 0.95);
+  color: hsla(0 0% 98% / 0.95);
   display: flex;
   justify-content: space-between;
   gap: 2rem;
@@ -13,7 +13,7 @@
 
 .toast-dismiss {
   background-color: hsl(var(--accent-darker));
-  color: hsla(var(--bg-700), 0.7);
+  color: hsla(0 0% 98% / 0.86);
   padding: 0.25rem;
   font-size: 0.8rem;
   text-transform: uppercase;
