--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,10 @@
   --font-500: 0, 0%, 28%;
   --font-400: 0, 0%, 42%;
   --font-300: 0, 0%, 56%;
-  --red-700: 0, 65%, 42%;
+  --red-700: 0, 85%, 15%;
   --red-500: 358, 99.9%, 42.9%;
   --red-300: 0, 90%, 95%;
-  --green-700: 135, 68%, 27%;
+  --green-700: 135, 85%, 15%;
   --green-500: 135, 72%, 34%;
   --green-300: 135, 100%, 95%;
   --orange-700: 34, 100%, 30%;
@@ -66,12 +66,12 @@ body.dark-mode {
   --bg-400: 222, 16%, 32%;
   --bg-300: 222, 16%, 36%;
   --bg-200: 222, 16%, 42%;
-  --red-700: 0, 65%, 42%;
+  --red-300: 358, 100%, 69.5%;
   --red-500: 358, 65%, 40.4%;
-  --red-300: 0, 90%, 95%;
-  --green-700: 135, 68%, 27%;
+  --red-700: 0, 90%, 85%;
+  --green-300: 135, 68%, 27%;
   --green-500: 135, 72%, 34%;
-  --green-300: 135, 100%, 95%;
+  --green-700: 135, 100%, 85%;
   --orange-700: 34, 100%, 30%;
   --orange-500: 34, 100%, 65%;
   --orange-300: 34, 100%, 95%;
@@ -83,6 +83,24 @@ body.dark-mode {
   --pure-white: #fff;
   --pure-black: #000;
 }
+
+/* 
+
+.redDark {
+  --red1: hsl(353 23.0% 9.8%);
+  --red2: hsl(357 34.4% 12.0%);
+  --red3: hsl(356 43.4% 16.4%);
+  --red4: hsl(356 47.6% 19.2%);
+  --red5: hsl(356 51.1% 21.9%);
+  --red6: hsl(356 55.2% 25.9%);
+  --red7: hsl(357 60.2% 31.8%);
+  --red8: hsl(358 65.0% 40.4%);
+  --red9: hsl(358 75.0% 59.0%);
+  --red10: hsl(358 85.3% 64.0%);
+  --red11: hsl(358 100% 69.5%);
+  --red12: hsl(351 89.0% 96.0%);
+}
+*/
 
 body {
   margin: 0;
