feat: exporting poppins font

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ body.dark-mode {
   --blue-300: 219, 86%, 92%;
   --font-Open-Sans: "Open Sans", sans-serif;
   --font-Lato: "Lato", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
   --pure-white: #fff;
   --pure-black: #000;
 }
