--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
   --blue-300: 219, 86%, 92%;
   --font-Open-Sans: "Open Sans", sans-serif;
   --font-Lato: "Lato", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
   --pure-white: #fff;
   --pure-black: #000;
 }
