--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -25,8 +25,7 @@
 }
 
 .btn:hover,
-.btn-outline:hover,
-.link:hover {
+.btn-outline:hover {
   box-shadow: 0 2px 9px hsla(var(--font-700), 0.25);
 }
 
