feat: changed font to IBM Plex

--- a/css/reset.css
+++ b/css/reset.css
@@ -14,7 +14,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-Open-Sans);
+  font-family: var(--font-IBM-Plex);
   margin: 0;
   padding-top: 2rem;
 }
