chore: updated example of slider

--- a/css/style.css
+++ b/css/style.css
@@ -82,24 +82,6 @@ body.dark-mode {
   --pure-black: #000;
 }
 
-/* 
-
-.redDark {
-  --red1: hsl(353 23.0% 9.8%);
-  --red2: hsl(357 34.4% 12.0%);
-  --red3: hsl(356 43.4% 16.4%);
-  --red4: hsl(356 47.6% 19.2%);
-  --red5: hsl(356 51.1% 21.9%);
-  --red6: hsl(356 55.2% 25.9%);
-  --red7: hsl(357 60.2% 31.8%);
-  --red8: hsl(358 65.0% 40.4%);
-  --red9: hsl(358 75.0% 59.0%);
-  --red10: hsl(358 85.3% 64.0%);
-  --red11: hsl(358 100% 69.5%);
-  --red12: hsl(351 89.0% 96.0%);
-}
-*/
-
 body {
   margin: 0;
   background-color: hsl(var(--bg-700));
@@ -270,6 +252,7 @@ body {
 
 .component-example {
   background-color: hsla(var(--primary-lighter), 0.19);
+  border: 1px solid hsla(var(--primary), 0.76);
   padding: 1rem;
   margin: 0.5rem 0;
   border-radius: 0.25rem;
@@ -306,7 +289,7 @@ body {
 .component-section {
   display: grid;
   grid-template-columns: 1fr;
-  transition: 0.4s all linear;
+  /* transition: 0.4s all linear; */
 }
 
 .component-description {
