--- a/css/components/alerts.css
+++ b/css/components/alerts.css
@@ -1,30 +1,30 @@
 .alert {
   margin: 0.5rem 0;
-  padding: 0.75rem;
+  padding: 1rem;
   display: flex;
   gap: 1rem;
 }
 
 .alert-info {
-  border-left: 0.25rem solid hsl(var(--blue-700));
+  border-left: 0.5rem solid hsl(var(--blue-700));
   background-color: hsl(var(--blue-300));
   color: hsl(var(--blue-500));
 }
 
 .alert-success {
-  border-left: 0.25rem solid hsl(var(--green-700));
+  border-left: 0.5rem solid hsl(var(--green-700));
   background-color: hsl(var(--green-300));
   color: hsl(var(--green-500));
 }
 
 .alert-error {
-  border-left: 0.25rem solid hsl(var(--red-700));
+  border-left: 0.5rem solid hsl(var(--red-700));
   background-color: hsl(var(--red-300));
   color: hsl(var(--red-500));
 }
 
 .alert-warning {
-  border-left: 0.25rem solid hsl(var(--orange-700));
+  border-left: 0.5rem solid hsl(var(--orange-700));
   background-color: hsl(var(--orange-300));
   color: hsl(var(--orange-500));
 }
@@ -32,23 +32,23 @@
 .alert-outline-success {
   border: 1px solid hsl(var(--green-700));
   color: hsl(var(--green-500));
-  background-color: hsl(var(--bg-700));
+  background-color: hsl(var(--green-300));
 }
 
 .alert-outline-info {
   border: 1px solid hsl(var(--blue-700));
   color: hsl(var(--blue-500));
-  background-color: hsl(var(--bg-700));
+  background-color: hsl(var(--blue-300));
 }
 
 .alert-outline-error {
   border: 1px solid hsl(var(--red-700));
   color: hsl(var(--red-500));
-  background-color: hsl(var(--bg-700));
+  background-color: hsl(var(--red-300));
 }
 
 .alert-outline-warning {
   border: 1px solid hsl(var(--orange-700));
   color: hsl(var(--orange-500));
-  background-color: hsl(var(--bg-700));
+  background-color: hsl(var(--orange-300));
 }
