--- a/css/components/modal.css
+++ b/css/components/modal.css
@@ -2,17 +2,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: hsla(var(--font-700), 0.09);
-  padding: 2rem 0;
+  background-color: hsla(var(--bg-500), 0.45);
+  padding: 1rem;
 }
 
 .modal {
   background-color: hsl(var(--bg-700));
-  box-shadow: 0px 0px 2px hsla(var(--font-600), 0.6),
-    0px 0px 3px hsla(var(--font-600), 0.3);
+  box-shadow: 0px 0px 2px hsla(var(--shadow-color), 0.6),
+    0px 0px 3px hsla(var(--shadow-color), 0.3);
   width: 50%;
   min-height: 8rem;
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -35,11 +35,31 @@
   gap: 0.5rem;
 }
 
-.modal-close-btn {
+.modal-close-btn,
+.demo-modal-close-btn {
   position: absolute;
   top: 0.5rem;
   right: 0.75rem;
+  cursor: pointer;
   font-size: 1.5rem;
+}
+
+.demo-modal-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9;
+  background-color: hsl(var(--bg-500), 0.9);
+}
+
+.demo-modal-content {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media screen and (min-width: 48em) {
