--- a/css/components/layout.css
+++ b/css/components/layout.css
@@ -100,3 +100,38 @@
 .wrap {
   flex-wrap: wrap;
 }
+
+.p-x-1 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.p-x-2 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.p-y-2 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.p-y-1 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.p-y-0-5 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.m-y-2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.m-y-1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
