--- a/css/components/sidebar.css
+++ b/css/components/sidebar.css
@@ -22,7 +22,8 @@
   cursor: pointer;
   transition: all 0.2s linear;
   border-radius: 0 0.25rem 0.25rem 0;
-  color: hsl(var(--font-700));
+  color: hsl(var(--font-600));
+  border-left: 0.25rem solid transparent;
 }
 
 .sidebar-item > a {
@@ -30,7 +31,7 @@
 }
 
 .sidebar-item:hover {
-  background-color: hsla(var(--primary-lighter), 0.21);
+  background-color: hsl(var(--blue-300));
   color: hsl(var(--primary));
   transform: none;
   border-left: 0.25rem solid hsla(var(--primary), 0.5);
@@ -39,5 +40,5 @@
 .sidebar-item.active {
   border-left: 0.25rem solid hsla(var(--primary), 0.9);
   font-weight: 700;
-  color: hsl(var(--primary-dark));
+  color: hsl(var(--blue-500));
 }
